--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Gregory Tomlinson | Hacker</title>
 <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>    
+<meta name="description" content="gregory tomlinson is a developer and hacker in NYC."/>
+    <meta name="author" content="gregory tomlinson"/>
+    <meta name="keywords" content="gregory tomlinson is a developer and hacker in NYC."/>
 <style type="text/css">
 * {
     margin:0;
