--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@ h1 {
     margin-top:150px;
 
 }
+a {
+    color:#69f;
+}
 </style>
 </head>
 <body>
     <h1>Hacker</h1>
+    <a href="/hacks.html">hacks</a>
+    <!-- Are you disappointed? -->
+    
 </body>
 </html>
