--- a/hacks.html
+++ b/hacks.html
@@ -49,9 +49,12 @@ ul li {
 <li><a href="http://giphy.com">Giphy website</a></li>
 <li><a href="http://memory.labs.giphy.com/">Giphy Memory</a></li>
 <li><a href="http://labs.giphy.com/">Giphy Labs</a></li>
+<li><a href="https://github.com/gregory80/fastFrag">fastFrag</a></li>
+<li><a href="https://github.com/gregory80/freshbooks-js">freshbooks-js</a></li>
 
-
-
+<li><a href="http://weartoride.com/forecast">Wear to Ride</a></li>
+<li>Gif Chat</li>
+<li>ficly writes like</li>
 <li>TipTop</li>
 <li>Photo Swirl</li>
 <li>Digiwhack</li>
