--- a/hacks.html
+++ b/hacks.html
@@ -71,5 +71,11 @@ ul li {
 
 </ul>
 </div>
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script type="text/javascript">
+ $("a").bind("click", function(e) {
+    $(e.target).attr("target", "new");
+ })
+ </script>
 </body>
 </html>
