--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@ h1 {
 a {
     color:#69f;
 }
+p {
+    margin:20px 0 15px;
+}
+.smaller {
+    font-size:10px;
+}
+.smaller a  {
+    text-decoration: none;
+}
 </style>
 </head>
 <body>
     <h1>Hacker</h1>
+
     <a href="/hacks.html">hacks</a>
+    <p class="smaller">PGP Key <a type="application/pgp-keys" href="gregory_tomlinson_pub.asc">F4B3 3F36 5E67 49DD 0CBE  96B6 5595 5873 86E8 1425</a></p>
     <!-- Are you disappointed? -->
     
 </body>
