--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ p {
     <h1>Hacker</h1>
 
     <a href="/hacks.html">hacks</a>
-    <p class="smaller">PGP Key <a type="application/pgp-keys" href="gregory_tomlinson_pub.asc">F4B3 3F36 5E67 49DD 0CBE  96B6 5595 5873 86E8 1425</a></p>
+    <p class="smaller">PGP Key <a type="application/pgp-keys" href="gregory_tomlinson_pub.asc">E52C 417C AECD 0ACF 7200  5840 F5A8 8E05 ADCE 40A1</a></p>
     <!-- Are you disappointed? -->
     
 </body>
