--- a/dad_2016/index.html
+++ b/dad_2016/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Dad 2016 Christmas Present</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/basics.css">
+    <link rel="stylesheet" type="text/css" href="css/basics.css">
 </head>
 <body>
 <!-- 
