--- a/warhol-superstars.html
+++ b/warhol-superstars.html
@@ -11,6 +11,17 @@
     <p>
     <a href="https://itunes.apple.com/us/app/warhol-superstars/id1200220502?ls=1&mt=8">Download on iTunes</a>
     </p>
+    <ul>
+        
+        <li>Baby Jane Holzer</li>
+        <li>Billy Name</li>
+        <li>Candy Darling</li> 
+        <li>Cherry Vanilla</li> 
+        <li>Internationl Velvet</li> 
+        <li>Jackie Curtis</li> 
+        <li>Joe Dallesandro</li> 
+        <li>Ultra Violet</li>
+    </ul>
 </div>
 
 </body>
