keybase verify, update titles

--- a/index.html
+++ b/index.html
@@ -36,65 +36,8 @@ p {
 </style>
 </head>
 <body>
-    <h1>Hacker</h1>
-
-    <a href="/hacks.html">hacks</a>
-    <p class="smaller">PGP Key <a type="application/pgp-keys" href="gregory_tomlinson_pub.asc">E52C 417C AECD 0ACF 7200  5840 F5A8 8E05 ADCE 40A1</a></p>
-    <!-- Are you disappointed? -->
-    <pre>
------BEGIN PGP PUBLIC KEY BLOCK-----
-
-mQINBFR50U8BEADN73Agw+IbnjYR/oMcIqgHm6ZmfLKBfGWuR4EKdYbyxHwHJQ6L
-qs6EGbvTvtYn6RYf9fYT1Abol2j2+iwsAIMb5YJ9HPKDJVWyENyaScedZGHVguIo
-x7OBQj5hI2jfYwMMQy7dpDLbLDLwGsw8JuqfHRbX/OuvQ901B1u7apMJjPmoGT0N
-LI216rT8Sx/pTUk/h/Op0Zp0qOUjz4HYjFfhMO8B7rfFpISkQw/rVv7a0OaElLdr
-alt68CR/LFd5e8vWXJ0TzhZqxHgEs4Ot9Jhccoh0hw4Kp5zrr+iukWB5iKW94roC
-mQfgxu3W46yop+IeV2hg3/C/FBkBMH9lIgwe/QVAZj0adKD4yWRoRTKlaD2aXKv2
-2q6CLaAOwg+oaxjjulcqkbZ/9izkv7Cvg9I68ZPSh6BOJp4qs4/y+Ps8eUeJpkog
-2y8Eb3yCDwcOcjV5wpo/uym2riHM/vgvXACr92I3sq0eYK81byyS+MjQ+BXSOGpq
-NUTEYAyvtFx8FTgCLlrW2WIhQfrT5ziD7viBv/I+eAKfmh0RssJj5qtXdeJs7NZA
-T+kLpOAdEEIC62C+vKLgWNOqbeZQZLRGLGOlSNGn3+lJ/xqtpQe/hp7tWgT0chvj
-YtViEDzPBs/WbYU8mz3DKIO/2N1QyqKsGPsVIiXpzhq5NzQaRIUbK6wobQARAQAB
-tC9HcmVnb3J5IFRvbWxpbnNvbiA8Z3JlZ29yeS50b21saW5zb25AZ21haWwuY29t
-PokCPgQTAQIAKAUCVHnRTwIbAwUJC0nYAAYLCQgHAwIGFQgCCQoLBBYCAwECHgEC
-F4AACgkQ9aiOBa3OQKEZ1Q/+O3v2o9JWTD6gbfKBZLsSaO42kCIOxJyIIgXhrvoU
-b6gDTJJH0tdbhBl8oZaenPLhlPHaJbWKQAcRBD+uP/SXzzYWxLi2LLNsTXLqogYO
-tfl/GnGvq7LBJxSPq69FF1F65LtpAxcsIEwfDBEurrwPtU4DpqpYWowJmuWZkimM
-FLt9y19LPJQyC7IzlJozhNyawvaVNY24evi3ESMGkcmX/xUcHrE6//mTCOAKaGHn
-rK3778RpbAASMSZvVLQsLxH9z3bbd56CH65tOiDBOdX3K3VAV472Xc9sRAWg3K8H
-Cv0o+O4N+8kJ6RCEVHq3J2tae9f5aEbl5AGNjjvvX1O0Ha5j6AU/qNDZ6GfmEc+l
-JLK0OAfnnmGbyUCv7G30O0I4PvwWMbr8npxbDQuBuIQ+rfqi1jLWzx7jlGr7j54n
-rwHMD/EdNeuUUjQ9V2l4Imwu2PzwH12ESzG36IqM3Vo84iqaNnYQs+3TrIWRYdhM
-FSRuEyArqnJyyzwgzTMu/gDqOvMVYQBuabCntCejmUfok7dCPHdG66dcRCPNXkVO
-QtFKdmdEsWIEBbcarnF9TNFMfboDFw6XUAzUWlVlPzCRHt0k0bU6MiGaYghx5hDy
-GYoQzzi23t4FyR4IcR/s7SaVLfbagDDaWpI0LHutjV3qZGhQIq9arFQVXMF866PB
-wAW5Ag0EVHnRTwEQALozarBNS6IVttEoj0kVlnlad/NDs0prlLT0AksO9pXMXxyr
-oORbyaBVIkFBPf9MnsIhhyCIcturZCrtVHrknOxi91VqK3pnahVmoG0DxRAvITkW
-+fji6H6hXt391h3f4rI0Eh8b5lYWHvcPYLgsn3zYyG0G8eqj8NvVKCs3vcwNSd41
-sPu6uBwUTleuUPZrK1kXlUBbz+DTnxMAonLmHGbbmvDAWqlPURZicU7dCz1dO4Sn
-R6FDNqirvLXtPWY11LG064OO52sKT3NbtbG2w/uovwJMrum93W48Xx90FNlIhqOM
-LFe4bA3802ZTAsLwFW16NL0rrcqOGYxv/SBZ5A2Oq1d166KGtSdGy+ScNqPABdyY
-Qawcwjc2J96iF9+ELr2927+i/RB7poCZiJMQayw1DLc42DGJydGL8iQl29kxWApn
-PIum0pZyvIhsFKx+hNnSxld9oe1vxfLmdWjIrODM1YpqZJIme6XGAZIeKYkMWoIk
-kUiuNIMCL5wJjdXST3gFgnf4t9/qwfI92/HDZJKRlSL+AkEu1JZrcQ6vwP7s63nf
-Zg4sKDQRWMnn9rBSgpKfPWkffRjFQIP4qQwv4KMR+nqPCGXY0/UFJi+mSY+Xe/LA
-Hjs4P0N5VV+S2uROpRkFbZHnk/wz0EjiZvYemq5hGmRQYVNkgR+6z6378I99ABEB
-AAGJAiUEGAECAA8FAlR50U8CGwwFCQtJ2AAACgkQ9aiOBa3OQKEFuA/+PtmA0cVE
-/UTAVk5kvB59S95t/41z80akc4ulqfXP/mG4jtu1rN4AnkVIvSsFB7lrDbE/EQZN
-xrGOuG2E7MAVsjq5uI97ooNbEaVmsLvMu1ZqnFjUUy8YT0cqYTJc0tibYOCFcmdH
-W2FGSvWzMRuX7ZHKIk+YW28jLP+NQI7FE9kQ9WmBx19HDv/UsaAeynhTnVgfB2pg
-+R85PQtqZv+uJ6FPRh+T2aZW7FUfO6kBfGbkrmDGW+6hLTlbv35Y2Tm479WHS7Gs
-eb6HmPbVD1Tnm0DME4elbox1du4bc1auegvV0Q2WbNr3NSjR7pmWQPphhecmvtgO
-sShF/dYyjFoxfWiopcC9l1xQrvLiw59IaqiTC0CtI0U7kdc98tc2XdskMRfF9lH+
-9kJ5KR5CJeHNzE18xF4NbwXAEvCFBJ9/n67R1Oe/Jsa9lKJNU8UyRKCk+JtVESPB
-MqD5B99Z5yxmpOAbhx1r68HA+fkV+XDhNYTTtrBZEDsLJfd83i9k73SOuHXo+xTY
-ygSK/0Ke76fMxv6tTfRJeqvPC55E+EzJGYOrL2i4o9xdNNZ81cAidvbvh1zoRiM8
-zFeudYm4Dm9k7FFDY84U225ZynISRH0l1/XJgyQx6lwrtIkGloPjOrgaCZWkriae
-w8waNQdBNmyf6brVemt+rVsKjYtOjInDZJM=
-=70Wl
------END PGP PUBLIC KEY BLOCK-----
-        
-    </pre>
+    <h1>Android Engineer</h1>
+    <a href="https://keybase.io/gtzilla">keybase.io/gtzilla</a>
     
 </body>
 </html>
