--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ p {
 </style>
 </head>
 <body>
-    <h1>Android Engineer</h1>
+    <h1>Client Side Engineer</h1>
     <a href="https://keybase.io/gtzilla">keybase.io/gtzilla</a>
     
 </body>
